إضافة مدونة تقنية شاملة مع تحسينات SEO متقدمة
✨ المميزات الجديدة:
- مدونة تقنية كاملة مع 4 مقالات متخصصة
- صفحة رئيسية للمدونة مع تصميم احترافي
- مقالات في ASP.NET Core و REST API و Clean Architecture و Angular
- نظام بحث وتصفية متقدم
- دعم اللغة العربية والإنجليزية

🔍 تحسينات SEO:
- Google Analytics (G-S1S6WYT0T9)
- Google Site Verification (glvuq_APk17ipqYfTsjfIWbPZSiPJc_1UZ_7O3MUsJs)
- meta tags شاملة مع Open Graph و Twitter Cards
- Schema.org structured data للمدونة والشخص والمنظمة
- sitemap.xml محدث مع جميع صفحات المدونة
- robots.txt محسن لمحركات البحث
- canonical URLs وDNS prefetch optimization
- geo-location tags لإربد، الأردن

📱 تجربة المستخدم:
- تصميم متجاوب بالكامل
- loading states وanimations سلسة
- dark/light theme toggle
- آمان وسرعة تحميل محسنة

🚀 الجاهزية للإنتاج:
- جميع الصفحات محسنة لمحركات البحث
- PWA configuration محدث
- 404 page مخصصة
- manifest.json معزز بمحتوى ثنائي اللغة

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Mohammad Al-shorman - Professional Portfolio",
-  "short_name": "Mohammad Portfolio",
-  "description": "Professional Full Stack Developer Portfolio showcasing modern web development projects and skills",
+  "name": "محمد الشرمان - مطور ويب محترف | Professional Portfolio & Blog",
+  "short_name": "محمد الشرمان",
+  "description": "مطور ويب محترف متخصص في ASP.NET Core و JavaScript من إربد، الأردن. مدونة تقنية ومشاريع احترافية",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -21,9 +21,47 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["portfolio", "developer", "business"],
+  "categories": ["portfolio", "developer", "business", "blog", "technology"],
   "lang": "en",
   "dir": "ltr",
   "scope": "/",
-  "prefer_related_applications": false
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "المدونة التقنية",
+      "short_name": "مدونة",
+      "description": "مقالات تقنية في تطوير الويب والبرمجة",
+      "url": "/blog/simple-blog.html",
+      "icons": [
+        {
+          "src": "img/favicon.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "المشاريع",
+      "short_name": "مشاريع",
+      "description": "مشاريع محمد الشرمان الاحترافية",
+      "url": "/Projects.html",
+      "icons": [
+        {
+          "src": "img/favicon.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "تواصل معي",
+      "short_name": "تواصل",
+      "description": "التواصل مع محمد الشرمان",
+      "url": "/#contact",
+      "icons": [
+        {
+          "src": "img/favicon.png",
+          "sizes": "96x96"
+        }
+      ]
+    }
+  ]
 }
